--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -436,3 +436,8 @@
   background-color: $white;
   border-top: $layout-header-border;
 }
+
+.chart-content-view {
+  width: 100%;
+  height: 25rem; // 400px
+}
