--- a/src/main/resources/public/template/chart/chartView.html
+++ b/src/main/resources/public/template/chart/chartView.html
@@ -7,7 +7,7 @@
 <input type="hidden" id="propertyJson" name="propertyJson" th:value="${chart?.propertyJson}"/>
 <input type="hidden" id="chartConfig" name="chartConfig" th:value="${chart?.chartConfig}"/>
 <div class="flex-column edit-row mt-2">
-    <div id="container" style="width:100%; height:400px;"/>
+    <div id="container" class="chart-content-view"/>
 </div>
 </body>
 </html>
