--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -905,11 +905,11 @@ input {
 input::placeholder {
   color: #ACB4BF;
 }
-input:not(:disabled):focus {
+input:not(:disabled):focus, input:not(:read-only):focus {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
-input:not(:disabled):hover {
+input:not(:disabled):hover, input:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
@@ -924,6 +924,7 @@ input:disabled {
 input:read-only {
   background-color: #F7F8F9;
   border-color: #EBEBEB;
+  pointer-events: none;
   cursor: default;
 }
 input.icon {
@@ -974,11 +975,11 @@ textarea {
 textarea::placeholder {
   color: #ACB4BF;
 }
-textarea:not(:disabled):focus {
+textarea:not(:disabled):focus, textarea:not(:read-only):focus {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
-textarea:not(:disabled):hover {
+textarea:not(:disabled):hover, textarea:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
@@ -992,6 +993,7 @@ textarea:disabled {
 textarea:read-only {
   background-color: #F7F8F9;
   border-color: #EBEBEB;
+  pointer-events: none;
   cursor: default;
 }
 textarea.error {
@@ -1037,11 +1039,11 @@ select {
   padding: 0 0.625rem 0 0.625rem;
   vertical-align: middle;
 }
-select:not(:disabled):focus {
+select:not(:disabled):focus, select:not(:read-only):focus {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
-select:not(:disabled):hover {
+select:not(:disabled):hover, select:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
@@ -1054,7 +1056,6 @@ select:disabled {
 }
 
 .select {
-  cursor: pointer;
   display: inline-block;
   position: relative;
   font-size: 1rem;
@@ -1082,6 +1083,7 @@ select:disabled {
   display: flex;
   align-items: flex-start;
   overflow: hidden;
+  cursor: pointer;
 }
 .select .designed-select:after {
   content: "";
@@ -1092,28 +1094,20 @@ select:disabled {
   position: absolute;
   right: 0.625rem;
 }
-.select .designed-select:hover {
+.select .designed-select:not(:disabled):hover, .select .designed-select:not(.readonly):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
-.select .designed-select:active {
+.select .designed-select:not(:disabled).active, .select .designed-select:not(.readonly).active {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
-.select .designed-select:active:after {
+.select .designed-select:not(:disabled).active:after, .select .designed-select:not(.readonly).active:after {
   top: 0.5625rem;
   background: url("../media/icons/icon_arrow_up.svg") no-repeat center left;
 }
-.select .designed-select.active {
-  outline: 0;
-  border: 0.0625rem solid #0098FF;
-}
-.select .designed-select.active:after {
-  top: 0.5625rem;
-  background: url("../media/icons/icon_arrow_up.svg") no-repeat center left;
-}
-.select .designed-select.active + .designed-options {
+.select .designed-select:not(:disabled).active + .designed-options, .select .designed-select:not(.readonly).active + .designed-options {
   display: block;
 }
 .select .designed-select.disabled-select {
@@ -1156,6 +1150,8 @@ select:disabled {
 }
 .select.readonly .designed-select {
   background-color: #F7F8F9;
+  pointer-events: none;
+  cursor: default;
 }
 
 option:hover {
@@ -1197,7 +1193,6 @@ label {
 }
 .radio input[type=radio] + span {
   position: relative;
-  cursor: pointer;
 }
 .radio input[type=radio] + span::before {
   content: "";
@@ -1222,7 +1217,10 @@ label {
   background-color: transparent;
   border-radius: 50%;
 }
-.radio input[type=radio] ~ .label {
+.radio input[type=radio]:not(:disabled) + span {
+  cursor: pointer;
+}
+.radio input[type=radio]:not(:disabled) ~ .label {
   cursor: pointer;
 }
 .radio input[type=radio]:not(:disabled):checked + span::before {
@@ -1267,7 +1265,6 @@ label {
 }
 .checkbox input[type=checkbox] + span {
   position: relative;
-  cursor: pointer;
 }
 .checkbox input[type=checkbox] + span::before {
   content: "";
@@ -1279,7 +1276,10 @@ label {
   border-radius: 0.0625rem;
   vertical-align: middle;
 }
-.checkbox input[type=checkbox] ~ .label {
+.checkbox input[type=checkbox]:not(:disabled) + span {
+  cursor: pointer;
+}
+.checkbox input[type=checkbox]:not(:disabled) ~ .label {
   cursor: pointer;
 }
 .checkbox input[type=checkbox]:not(:disabled):checked + span::after {
@@ -4154,6 +4154,7 @@ body.modal-active {
 .component .field-group .field-content.custom-code > input[type=text] {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+  pointer-events: none;
 }
 .component .field-group .field-content.custom-code > input[type=text]:focus, .component .field-group .field-content.custom-code > input[type=text]:hover {
   z-index: 25;
