--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -154,6 +154,7 @@
         > input[type=text] {
           border-top-right-radius: 0;
           border-bottom-right-radius: 0;
+          pointer-events: none;
           &:focus,
           &:hover {
             z-index: $z-index-event;
