#10087 동적 차트 데이터로 차트 그리기 -> MR 응대

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -264,8 +264,10 @@
                         if (target === 'edit') {
                             setDisplay(document.getElementById('typeSelectBox').value);
                         }
-                        let data = parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
-                        Highcharts.chart('container', data);
+                        if (chartId !== undefined) {
+                            let data = parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
+                            Highcharts.chart('container', data);
+                        }
                     }
                 }
             };
